# OpenGMK

./: Cargo.toml
gm8converter/: Cargo.toml
gm8converter/output/: backgrounds.cpp  object.hpp  sprite.cpp  sprite.hpp  utils.hpp
gm8converter/src/: main.rs  utils.rs
gm8converter/src/cpp_backend/: background.rs  game_assets.rs  mod.rs
gm8converter/static/: alarm.hpp  background.cpp.snippet  background.hpp  background_tileset.cpp.snippet  main.cpp  room.hpp
gm8decompiler/: Cargo.toml
gm8decompiler/src/: lib.rs  main.rs
gm8emulator/: Cargo.toml
gm8emulator/src/render/opengl/: wgl_ffi.rs
